testData/src/error/mvc/UserAction.kt
package com.aegis.web

import org.springframework.web.bind.annotation.RestController


@RestController
class UserAction {
}
